--- a/client_list.html
+++ b/client_list.html
@@ -49,7 +49,7 @@
       <ul class="mainnav">
         <li><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
         <li class="active"><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
-        <li><a href="barang_list.html"><i class="icon-facetime-video"></i><span>Barang</span> </a></li>
+        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
         <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span> </a> </li>
         <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span> </a> </li>
       </ul>
