--- a/karyawan_list.html
+++ b/karyawan_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Pembelian - Aplikasi Jual Beli</title>
+<title>List Vendor - Aplikasi Jual Beli</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -47,11 +47,13 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
-        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
-        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
-        <li class="active"><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span> </a> </li>
-        <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span> </a> </li>
+        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span></a></li>
+        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span></a></li>
+        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span></a></li>
+        <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span></a></li>
+        <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span></a></li>
+        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
       </ul>
     </div>
     <!-- /container --> 
@@ -71,26 +73,19 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="karyawan_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="pembelian_new.html" class="shortcut" style="width: 100%;">
+                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
               </div>
               <!-- /shortcuts --> 
-              <div class="shortcuts"> 
-                <a href="pembelian_grafik.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-bar-chart"></i>
-                  <span class="shortcut-label">Grafik</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
             </div>
             <!-- /widget-content --> 
           </div>
@@ -100,42 +95,60 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Pembelian</h3>
+              <h3>List Table Vendor</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th> Resource </th>
-                    <th> URL</th>
+                    <th> Nama </th>
+                    <th> Alamat</th>
+                    <th> Tempat Tanggal Lahir</th>
+                    <th> Status</th>
+                    <th> Posisi</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> Single </td>
+                    <td> Dept. Keuangan </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> Single </td>
+                    <td> Dept. Keuangan </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> Single </td>
+                    <td> Dept. Keuangan </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> Single </td>
+                    <td> Dept. Keuangan </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> Single </td>
+                    <td> Dept. Keuangan </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
