add menu dummy proyek

--- a/proyek_list.html
+++ b/proyek_list.html
@@ -73,14 +73,14 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="vendor_list.html" class="shortcut" style="width: 100%;">
+                <a href="proyek_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="vendor_new.html" class="shortcut" style="width: 100%;">
+                <a href="proyek_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
@@ -102,35 +102,89 @@
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th> Resource </th>
-                    <th> URL</th>
-                    <th class="td-actions"> </th>
+                    <th> Deskripsi </th>
+                    <th> Client</th>
+                    <th> Barang</th>
+                    <th> Vendor</th>
+                    <th> Nilai Proyek</th>
+                    <th> Jangka Waktu Proyek</th>
+                    <th> Contact Person - Client</th>
+                    <th> Telp - Client</th>
+                    <th> Contact Person - Vendor</th>
+                    <th> Telp - Vendor</th>
+                    <th> Status</th>
+                    <th class="td-actions"></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Pengerjaan Konstruksi Bangunan Gedung. XYZ </td>
+                    <td> PT. Client 1 </td>
+                    <td> Material Alam </td>
+                    <td> PT. Vendor 1 </td>
+                    <td> Rp. 100.000.000 </td>
+                    <td> 60 Hari </td>
+                    <td> Budi </td>
+                    <td> 0813 9090 8080 </td>
+                    <td> Joko </td>
+                    <td> 0811 7777 7777 </td>
+                    <td> Running </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Pengerjaan Konstruksi Bangunan Gedung. XYZ </td>
+                    <td> PT. Client 1 </td>
+                    <td> Material Alam </td>
+                    <td> PT. Vendor 1 </td>
+                    <td> Rp. 100.000.000 </td>
+                    <td> 60 Hari </td>
+                    <td> Budi </td>
+                    <td> 0813 9090 8080 </td>
+                    <td> Joko </td>
+                    <td> 0811 7777 7777 </td>
+                    <td> Running </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Pengerjaan Konstruksi Bangunan Gedung. XYZ </td>
+                    <td> PT. Client 1 </td>
+                    <td> Material Alam </td>
+                    <td> PT. Vendor 1 </td>
+                    <td> Rp. 100.000.000 </td>
+                    <td> 60 Hari </td>
+                    <td> Budi </td>
+                    <td> 0813 9090 8080 </td>
+                    <td> Joko </td>
+                    <td> 0811 7777 7777 </td>
+                    <td> Running </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Pengerjaan Konstruksi Bangunan Gedung. XYZ </td>
+                    <td> PT. Client 1 </td>
+                    <td> Material Alam </td>
+                    <td> PT. Vendor 1 </td>
+                    <td> Rp. 100.000.000 </td>
+                    <td> 60 Hari </td>
+                    <td> Budi </td>
+                    <td> 0813 9090 8080 </td>
+                    <td> Joko </td>
+                    <td> 0811 7777 7777 </td>
+                    <td> Running </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> Pengerjaan Konstruksi Bangunan Gedung. XYZ </td>
+                    <td> PT. Client 1 </td>
+                    <td> Material Alam </td>
+                    <td> PT. Vendor 1 </td>
+                    <td> Rp. 100.000.000 </td>
+                    <td> 60 Hari </td>
+                    <td> Budi </td>
+                    <td> 0813 9090 8080 </td>
+                    <td> Joko </td>
+                    <td> 0811 7777 7777 </td>
+                    <td> Running </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
