--- a/barang_list.html
+++ b/barang_list.html
@@ -52,6 +52,8 @@
         <li class="active"><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
         <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span> </a> </li>
         <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span> </a> </li>
+        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
       </ul>
     </div>
     <!-- /container --> 
