add action edit delete new vendor

--- a/karyawan_list.html
+++ b/karyawan_list.html
@@ -47,13 +47,13 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span></a></li>
+        <li><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span></a></li>
         <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span></a></li>
         <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span></a></li>
         <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span></a></li>
         <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span></a></li>
         <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
+        <li class="active"><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
       </ul>
     </div>
     <!-- /container --> 
