--- a/vendor_list_submit_edit.html
+++ b/vendor_list_submit_edit.html
@@ -64,6 +64,7 @@
 <div class="main">
   <div class="main-inner">
     <div class="container">
+      <p id="notice_info" class="bg-warning pad-10 text-center">Data berhasil di-edit</p>
       <div class="row">
         <div class="span2">
           <div class="widget">
@@ -114,47 +115,47 @@
                 <tbody>
                   <tr>
                     <td> 1 </td>
-                    <td> Perusahaan 1 </td>
-                    <td> Jakarta 1 </td>
-                    <td> CP 1 </td>
+                    <td> Perusahaan 10 </td>
+                    <td> Jakarta 10 </td>
+                    <td> CP 10 </td>
                     <td> +628xxxxx </td>
-                    <td> perusahaan_1@email.com </td>
+                    <td> perusahaan_10@email.com </td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
                     <td> 2 </td>
-                    <td> Perusahaan 2 </td>
-                    <td> Jakarta 2 </td>
-                    <td> CP 2 </td>
+                    <td> Perusahaan 20 </td>
+                    <td> Jakarta 20 </td>
+                    <td> CP 20 </td>
                     <td> +628xxxxx </td>
-                    <td> perusahaan_2@email.com </td>
+                    <td> perusahaan_20@email.com </td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
                     <td> 3 </td>
-                    <td> Perusahaan 3 </td>
-                    <td> Jakarta 3 </td>
-                    <td> CP 3 </td>
+                    <td> Perusahaan 30 </td>
+                    <td> Jakarta 30 </td>
+                    <td> CP 30 </td>
                     <td> +628xxxxx </td>
-                    <td> perusahaan_3@email.com </td>
+                    <td> perusahaan_30@email.com </td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
                     <td> 4 </td>
-                    <td> Perusahaan 4 </td>
-                    <td> Jakarta 4 </td>
-                    <td> CP 4 </td>
+                    <td> Perusahaan 40 </td>
+                    <td> Jakarta 40 </td>
+                    <td> CP 40 </td>
                     <td> +628xxxxx </td>
-                    <td> perusahaan_4@email.com </td>
+                    <td> perusahaan_40@email.com </td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
                     <td> 5 </td>
-                    <td> Perusahaan 5 </td>
-                    <td> Jakarta 5 </td>
-                    <td> CP 5 </td>
+                    <td> Perusahaan 50 </td>
+                    <td> Jakarta 50 </td>
+                    <td> CP 50 </td>
                     <td> +628xxxxx </td>
-                    <td> perusahaan_5@email.com </td>
+                    <td> perusahaan_50@email.com </td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
@@ -193,5 +194,10 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="assets/js/jquery-1.7.2.min.js"></script> 
 <script src="assets/js/bootstrap.js"></script>
+<script type="text/javascript">
+  setTimeout(function() {
+    $('#notice_info').hide();
+  }, 2000);
+</script>
 </body>
 </html>
