add info status aktif

--- a/vendor_list_submit_edit.html
+++ b/vendor_list_submit_edit.html
@@ -109,6 +109,7 @@
                     <th> Contact Person </th>
                     <th> Telpon </th>
                     <th> Email </th>
+                    <th>Aktif</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
@@ -120,6 +121,7 @@
                     <td> CP 10 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_10@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -129,6 +131,7 @@
                     <td> CP 20 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_20@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -138,6 +141,7 @@
                     <td> CP 30 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_30@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -147,6 +151,7 @@
                     <td> CP 40 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_40@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -156,6 +161,7 @@
                     <td> CP 50 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_50@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
