--- a/vendor_list.html
+++ b/vendor_list.html
@@ -108,6 +108,7 @@
                     <th> Contact Person </th>
                     <th> Telpon </th>
                     <th> Email </th>
+                    <th>Aktif</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
@@ -119,6 +120,7 @@
                     <td> CP 1 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_1@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -128,6 +130,7 @@
                     <td> CP 2 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_2@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -137,6 +140,7 @@
                     <td> CP 3 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_3@email.com </td>
+                    <td>-</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -146,6 +150,7 @@
                     <td> CP 4 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_4@email.com </td>
+                    <td>&#10004;</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
@@ -155,6 +160,7 @@
                     <td> CP 5 </td>
                     <td> +628xxxxx </td>
                     <td> perusahaan_5@email.com </td>
+                    <td>-</td>
                     <td class="td-actions"><a href="vendor_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="vendor_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                 
