--- a/proyek_list.html
+++ b/proyek_list.html
@@ -47,13 +47,27 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span></a></li>
-        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span></a></li>
-        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span></a></li>
-        <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span></a></li>
-        <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span></a></li>
-        <li class="active"><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
+        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
+        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
+        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
         <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
+        <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="icons.html">Pengguna</a></li>
+            <li><a href="faq.html">Data Wajib Pajak Pribadi & Badan</a></li>
+            <li><a href="pricing.html">User Level</a></li>
+            <!-- <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="error.html">404</a></li> -->
+          </ul>
+        </li>
+        <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="pembelian_list.html.html">Pembelian</a></li>
+            <li><a href="penjualan_list.html">Penjualan</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
     <!-- /container --> 
