manage menu proyek and index page

--- a/vendor_list.html
+++ b/vendor_list.html
@@ -43,31 +43,28 @@
   <!-- /navbar-inner --> 
 </div>
 <!-- /navbar -->
-<div class="subnavbar">
+<div class="subnavbar">   
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
-        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
-        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
-        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
-        <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="icons.html">Pengguna</a></li>
-            <li><a href="faq.html">Data Wajib Pajak Pribadi & Badan</a></li>
-            <li><a href="pricing.html">User Level</a></li>
-            <!-- <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Signup</a></li>
-            <li><a href="error.html">404</a></li> -->
-          </ul>
-        </li>
-        <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="pembelian_list.html.html">Pembelian</a></li>
-            <li><a href="penjualan_list.html">Penjualan</a></li>
-          </ul>
-        </li>
+          <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+          <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="icons.html">Pengguna</a></li>
+                  <li><a href="faq.html">Data Wajib Pajak Pribadi & Badan</a></li>
+                  <li><a href="pricing.html">User Level</a></li>
+                  <!-- <li><a href="login.html">Login</a></li>
+                  <li><a href="signup.html">Signup</a></li>
+                  <li><a href="error.html">404</a></li> -->
+              </ul>
+          </li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="pembelian_list.html">Pembelian</a></li>
+                  <li><a href="penjualan_list.html">Penjualan</a></li>
+              </ul>
+          </li>
       </ul>
     </div>
     <!-- /container --> 
@@ -87,16 +84,34 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="vendor_list.html" class="shortcut" style="width: 100%;">
+                <a href="proyek_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="vendor_new.html" class="shortcut" style="width: 100%;">
+                <a href="proyek_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
+                </a>
+              </div>
+              <div class="shortcuts"> 
+                <a href="vendor_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-reply"></i>
+                  <span class="shortcut-label">Vendor</span> 
+                </a>
+              </div>
+              <div class="shortcuts"> 
+                <a href="client_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-share-alt"></i>
+                  <span class="shortcut-label">Client</span> 
+                </a>
+              </div>
+              <div class="shortcuts"> 
+                <a href="barang_list.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-hdd"></i>
+                  <span class="shortcut-label">Barang</span> 
                 </a>
               </div>
               <!-- /shortcuts --> 
