--- a/barang_new.html
+++ b/barang_new.html
@@ -65,7 +65,7 @@
         </li>
         <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="pembelian_list.html.html">Pembelian</a></li>
+            <li><a href="pembelian_list.html">Pembelian</a></li>
             <li><a href="penjualan_list.html">Penjualan</a></li>
           </ul>
         </li>
