--- a/karyawan_new.html
+++ b/karyawan_new.html
@@ -48,11 +48,8 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
-        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
-        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
         <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
+        <li class="active"><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
         <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="icons.html">Pengguna</a></li>
@@ -100,7 +97,28 @@
                   <span class="shortcut-label">New</span> 
                 </a>
               </div>
-              <!-- /shortcuts --> 
+              <!-- /shortcuts -->
+              <div class="shortcuts"> 
+                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-list-alt"></i>
+                  <span class="shortcut-label">Absen Karyawan</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+              <div class="shortcuts"> 
+                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-usd"></i>
+                  <span class="shortcut-label">Gaji Karyawan</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+              <div class="shortcuts"> 
+                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-stackexchange"></i>
+                  <span class="shortcut-label">Laporan Pajak PPh 21</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
             </div>
             <!-- /widget-content --> 
           </div>
