--- a/karyawan_pph_21.html
+++ b/karyawan_pph_21.html
@@ -130,7 +130,7 @@
               <h3>List Table Vendor</h3>
             </div>
             <!-- /widget-header -->
-            <div class="widget-content">
+            <!-- <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
@@ -186,7 +186,7 @@
                 
                 </tbody>
               </table>
-            </div>
+            </div> -->
             <!-- /widget-content --> 
           </div>
           <!-- /widget -->
