--- a/karyawan_absen.html
+++ b/karyawan_absen.html
@@ -127,10 +127,10 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Vendor</h3>
+              <h3>Rekap Absen Karyawan</h3>
             </div>
             <!-- /widget-header -->
-            <div class="widget-content">
+            <!-- <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
@@ -186,7 +186,7 @@
                 
                 </tbody>
               </table>
-            </div>
+            </div> -->
             <!-- /widget-content --> 
           </div>
           <!-- /widget -->
