manage menu karyawan

--- a/karyawan_gaji.html
+++ b/karyawan_gaji.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Karyawan - Aplikasi Keuangan</title>
+<title>Gaji Karyawan - Aplikasi Keuangan</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -127,7 +127,7 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Vendor</h3>
+              <h3>Gaji Karyawan</h3>
             </div>
             <!-- /widget-header -->
             <!-- <div class="widget-content">
