--- a/karyawan_new.html
+++ b/karyawan_new.html
@@ -24,7 +24,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Jual Beli </a>
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Keuangan - PT. Putra Bahari Mandiri </a>
       <div class="nav-collapse">
         <ul class="nav pull-right">
           <li>
@@ -99,21 +99,21 @@
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                <a href="karyawan_absen.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Absen Karyawan</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                <a href="karyawan_gaji.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-usd"></i>
                   <span class="shortcut-label">Gaji Karyawan</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="karyawan_new.html" class="shortcut" style="width: 100%;">
+                <a href="karyawan_pph_21.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-stackexchange"></i>
                   <span class="shortcut-label">Laporan Pajak PPh 21</span> 
                 </a>
@@ -128,7 +128,7 @@
         <div class="span10">
           <div class="widget">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>Form</h3>
+              <h3>Form Karyawan</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
