--- a/karyawan_pph_21.html
+++ b/karyawan_pph_21.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Vendor - Aplikasi Jual Beli</title>
+<title>Pajak Karyawan - Aplikasi Jual Beli</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Jual Beli </a>
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Keuangan - PT. Putra Bahari Mandiri </a>
       <div class="nav-collapse">
         <ul class="nav pull-right">
           <li>
@@ -127,7 +127,7 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Vendor</h3>
+              <h3>Laporan Pajak PPh 21 Karyawan</h3>
             </div>
             <!-- /widget-header -->
             <!-- <div class="widget-content">
