--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                     <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
                     <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="icons.html">Pengguna</a></li>
-                            <li><a href="faq.html">Data Wajib Pajak Pribadi & Badan</a></li>
-                            <li><a href="pricing.html">User Level</a></li>
+                            <li><a href="pengguna.html">Pengguna</a></li>
+                            <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
+                            <li><a href="user_level.html">User Level</a></li>
                             <!-- <li><a href="login.html">Login</a></li>
                             <li><a href="signup.html">Signup</a></li>
                             <li><a href="error.html">404</a></li> -->
