dummy table list barang

--- a/barang_list.html
+++ b/barang_list.html
@@ -131,38 +131,67 @@
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th> Resource </th>
-                    <th> URL</th>
+                    <th> No </th>
+                    <th> Kategori</th>
+                    <th> Jenis</th>
+                    <th> Volume</th>
+                    <th> Satuan</th>
+                    <th> Harga Satuan</th>
+                    <th> Over Project</th>
+                    <th> Vendor</th>
+                    <th> Total</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> 1 </td>
+                    <td> Barang </td>
+                    <td> Pallet </td>
+                    <td> 1000 </td>
+                    <td> Pcs </td>
+                    <td> 500.00 </td>
+                    <td> 50.000 </td>
+                    <td> Tidak </td>
+                    <td> Tidak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> 2 </td>
+                    <td> Jasa </td>
+                    <td> Manpower </td>
+                    <td> 70 </td>
+                    <td> Span </td>
+                    <td> 700.000 </td>
+                    <td> 49.000.000 </td>
+                    <td> Tidak </td>
+                    <td> Tidak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> 3 </td>
+                    <td> Barang & Jasa </td>
+                    <td> Pallet & Manpower </td>
+                    <td> 1000 + 70</td>
+                    <td> Pcs + Span</td>
+                    <td> 500.00 + 700.000</td>
+                    <td> 700.500 </td>
+                    <td> Tidak </td>
+                    <td> Tidak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> 4 </td>
+                    <td> Barang </td>
+                    <td> Pallet </td>
+                    <td> 1000 </td>
+                    <td> Pcs </td>
+                    <td> 500.00 </td>
+                    <td> 50.000 </td>
+                    <td> Ya </td>
+                    <td> PT. Vendor 2 </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                
+                  </tr>              
                 </tbody>
               </table>
             </div>
