--- a/barang_list.html
+++ b/barang_list.html
@@ -65,6 +65,13 @@
                   <li><a href="penjualan_list.html">Penjualan</a></li>
               </ul>
           </li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-list-ul"></i><span>Daftar</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="daftar_akun.html">Daftar Akun</a></li>
+                  <li><a href="mata_uang.html">Mata Uang</a></li>
+                  <li><a href="departemen.html">Departemen</a></li>
+              </ul>
+          </li>
       </ul>
     </div>
     <!-- /container --> 
