add user level list

--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="utf-8">
-    <title>Login - Aplikasi Jual Beli</title>
+    <title>Login - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes"> 
@@ -35,7 +35,7 @@
 			</a>
 			
 			<a class="brand" href="index.html">
-				Aplikasi Jual Beli				
+				Aplikasi Keuangan PT. Putra Bahari Mandiri				
 			</a>		
 			
 			<div class="nav-collapse">
