--- a/user_level.html
+++ b/user_level.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>New Proyek - Aplikasi Jual Beli</title>
+<title>Pengguna - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -21,30 +21,30 @@
     <![endif]-->
 </head>
 <body>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-        class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Keuangan - PT. Putra Bahari Mandiri</a>
-            <div class="nav-collapse">
-                <ul class="nav pull-right">
-                    <li>
-                        <a href="login.html">
-                        <i class="icon-lock"></i> Login
-                        </a>
-                    </li>
-                </ul>
-                <form class="navbar-search pull-right">
-                    <input type="text" class="search-query" placeholder="Search">
-                </form>
-            </div>
-            <!--/.nav-collapse --> 
-        </div>
-        <!-- /container --> 
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a><a class="brand" href="index.html">Aplikasi Keuangan - PT. Putra Bahari Mandiri </a>
+      <div class="nav-collapse">
+        <ul class="nav pull-right">
+          <li>
+            <a href="login.html">
+              <i class="icon-lock"></i> Login
+            </a>
+          </li>
+        </ul>
+        <form class="navbar-search pull-right">
+          <input type="text" class="search-query" placeholder="Search">
+        </form>
+      </div>
+      <!--/.nav-collapse --> 
     </div>
-    <!-- /navbar-inner --> 
+    <!-- /container --> 
   </div>
-  <!-- /navbar -->
-  <div class="subnavbar">   
+  <!-- /navbar-inner --> 
+</div>
+<!-- /navbar -->
+<div class="subnavbar">   
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
@@ -79,23 +79,75 @@
   </div>
   <!-- /subnavbar-inner --> 
 </div>
-  <!-- /subnavbar -->
 <!-- /subnavbar -->
 <div class="main">
   <div class="main-inner">
     <div class="container">
       <div class="row">
-        <div class="span12">
+        <div class="span2">
           <div class="widget">
-            <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>Daftar Akun / Kelompok Keuangan</h3>
+            <div class="widget-header"> <i class="icon-bookmark"></i>
+              <h3>Shortcuts</h3>
             </div>
             <!-- /widget-header -->
-            
+            <div class="widget-content">
+              <div class="shortcuts"> 
+                <a href="pengguna.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-list-alt"></i>
+                  <span class="shortcut-label">List</span> 
+                </a>
+              </div>
+              <!-- /shortcuts -->
+              <div class="shortcuts"> 
+                <a href="pengguna_new.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-file"></i>
+                  <span class="shortcut-label">New</span> 
+                </a>
+              </div>
+              <!-- /shortcuts --> 
+            </div>
             <!-- /widget-content --> 
           </div>
           <!-- /widget -->
-
+        </div>
+        <!-- /span4 -->
+        <div class="span10">
+          <div class="widget">
+            <div class="widget-header"> <i class="icon-th-list"></i>
+              <h3>Daftar User Level</h3>
+            </div>
+            <!-- /widget-header -->
+            <div class="widget-content">
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th width="30"> No. </th>
+                    <th> Level </th>
+                    <th class="td-actions"> Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td> 1 </td>
+                    <td> Admin </td>
+                    <td class="td-actions"><a href="pengguna_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="pengguna_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> 2 </td>
+                    <td> Manager </td>
+                    <td class="td-actions"><a href="pengguna_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="pengguna_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> 3 </td>
+                    <td> Staff </td>
+                    <td class="td-actions"><a href="pengguna_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="pengguna_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <!-- /widget-content --> 
+          </div>
+          <!-- /widget -->
         </div>
         <!-- /span8 -->
       </div>
@@ -125,5 +177,8 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="assets/js/jquery-1.7.2.min.js"></script> 
 <script src="assets/js/bootstrap.js"></script>
+<script type="text/javascript">
+  
+</script>
 </body>
 </html>
