--- a/wajib_pajak.html
+++ b/wajib_pajak.html
@@ -48,7 +48,7 @@
     <div class="subnavbar-inner">
       <div class="container">
         <ul class="mainnav">
-          <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+          <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
           <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
           <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
             <ul class="dropdown-menu">
