change icon rule pembelian penjualan

--- a/pembelian.html
+++ b/pembelian.html
@@ -89,7 +89,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-shopping-cart"></i>
                   <span class="shortcut-label">Permintaan Pembelian</span> 
                 </a>
               </div>
@@ -151,7 +151,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">Kwitansi</span> 
                 </a>
               </div>
@@ -189,7 +189,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-truck"></i>
                   <span class="shortcut-label">Surat Jalan</span> 
                 </a>
               </div>
@@ -220,7 +220,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-file-text-alt"></i>
                   <span class="shortcut-label">Invoice</span> 
                 </a>
               </div>
@@ -251,7 +251,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-copy"></i>
                   <span class="shortcut-label">Tanda Terima</span> 
                 </a>
               </div>
@@ -289,7 +289,7 @@
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-list-alt"></i>
+                  <i class="shortcut-icon icon-usd"></i>
                   <span class="shortcut-label">Jenis Pembayaran</span> 
                 </a>
               </div>
