--- a/print_po.html
+++ b/print_po.html
@@ -150,9 +150,9 @@
         			</thead>
         			<tbody>
         				<tr>
-        					<td>DATE</td>
-        					<td>NUMBER</td>
-        					<td>PAGE</td>
+        					<td>TANGGAL</td>
+        					<td>NO</td>
+        					<td>HALAMAN</td>
         				</tr>
         				<tr>
         					<td>19/06/2014</td>
@@ -160,7 +160,7 @@
         					<td>1 of 1</td>
         				</tr>
         				<tr>
-        					<td>CURRENCY</td>
+        					<td>MATA UANG</td>
         					<td colspan="2">VENDOR</td>
         				</tr>
         				<tr>
@@ -183,10 +183,10 @@
         	<table class="blck">
         		<thead>
 					<tr class="header-color">
-						<th>Line</th>
-						<th>Description</th>
-						<th>Vol</th>
-						<th>Sat</th>
+						<th>Item</th>
+						<th>Deskripsi</th>
+						<th>Jumlah</th>
+						<th>Satuan</th>
 						<th>Harga Satuan</th>
 						<th>Total</th>
 					</tr>
@@ -245,18 +245,18 @@
         	<div class="ftr lft pd5">
         		<div class="rltv">
         			<p>Purchase Order confirmation :</p>
-	        		<p>Payment Terms :</p>
+	        		<p>Terms Pembayaran :</p>
 	        		<p>M1 - 1 Minggu Maksimal<br/><br/></p>
 	        		<h3>PT. WILDAN LESTARI</h3>	
         		</div>
         		<div>
         			<div class="lft wd3">
-        				<p>Delivery Date :<br/>09/06/2014</p>
-        				<p>Delivery To : W1312-C1</p>
+        				<p>Tanggal Penerimaan :<br/>09/06/2014</p>
+        				<p>Diterima Oleh : W1312-C1</p>
         			</div>
         			<div class="lft">
-        				<p>Signature : 09/06/2014</p>
-        				<p>Date : 20 Juni 2014</p>
+        				<p>Nama Penerima : 09/06/2014</p>
+        				<p>Tanggal : 20 Juni 2014</p>
         			</div>
         		</div>
         	</div>
