add form bukti pembayaran new

--- a/pembelian.html
+++ b/pembelian.html
@@ -116,7 +116,7 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="bukti_pembayaran_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Bukti Pembayaran</span> 
                 </a>
