add form tanda terima

--- a/pembelian.html
+++ b/pembelian.html
@@ -247,7 +247,7 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="tanda_terima_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-copy"></i>
                   <span class="shortcut-label">Tanda Terima</span> 
                 </a>
