--- a/permintaan_pembelian_new.html
+++ b/permintaan_pembelian_new.html
@@ -96,7 +96,7 @@
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="pembelian_new.html" class="shortcut" style="width: 100%;">
+                <a href="permintaan_pembelian_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
